// game.proto

syntax = "proto3";
package admin;
import "odds.proto";

//管理员权限信息
message PermissionInfo{
    string name = 0;
    string url = 1;
}

//管理员信息
message AdminInfo {
    //账号
    string account = 0;
    string name = 1;
    repeated int32 permission = 2;
    // 所盯用户账号数组
    repeated string watchUsers = 3;    
}
//管理员所有信息
message AdminOptionInfo{
    //账号
    string account = 0;
    //密码
    string password = 1;
    //昵称
    string name = 2;
    //状态 1-正常   2-停用
    int32 state = 3;
    // 权限
    repeated int32 permission = 4;
    // 所盯用户账号数组
    repeated string watchUsers = 5;
}

//************************************ 消息体 ******************************

//管理员登录请求
message LoginRequest {
    //用户账号
    string account = 0;
    //用户密码
    string password = 1;
    // 管理端版本号
    string version = 2;
}
message LoginReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
    //管理员信息
    AdminInfo info = 1;
    //系统的产品列表
    repeated string gameList = 2;
    // 赔率数组
    repeated OddsInfo oddsInfo = 3;
}

//管理员创建请求
message RegisterRequest {
    // 操作者帐号
    string account = 0;
    // 操作者名称
    string name = 1;
    // 创建数据
    AdminOptionInfo info = 2;
}
message RegisterReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
}

//切换管理员的账号状态
message UpdateStateRequest {
    // 操作者帐号
    string account = 0;
    // 操作者名称
    string name = 1;
    // 更新数据
    AdminOptionInfo info = 2;
}
message UpdateStateReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
}

//切换管理员的账号基础信息
message UpdateInfoRequest {
     // 操作者帐号
    string account = 0;
    // 操作者名称
    string name = 1;
    // 更新数据
    AdminOptionInfo info = 2;

}
message UpdateInfoReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
}

//切换管理员的账号权限
message UpdatePermissionRequest {
    // 操作者帐号
    string account = 0;
    // 操作者名称
    string name = 1;
    //管理员ID列表
    repeated string accountArr = 2;
    //权限列表
    repeated int32 permission = 3;
}
message UpdatePermissionReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
}

//管理员列表请求
message AllRequest {
    //用户账号
    string account = 0;
    // 当前页下标
    int32 pageIndex = 1;
    // 当前页数据量
    int32 pageSize = 2;
}
message AllReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
    //管理员信息
    repeated AdminOptionInfo info = 1;
}

//管理员修改自己密码
message ModifyPwdRequest {
    //用户账号
    string account = 0;
    //原密码
    string oldPwd = 1;
    //新密码
    string newPwd = 2;
    //平台类型
    PlatFormType clientType = 3;
}
message ModifyPwdReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
}

//管理员获取对应管理员数据
message GetAdminRequest {
    //用户账号
    string account = 0;
    //目标用户账号
    string targetAccount = 1;
}
message GetAdminReplay {
    //返回码
    enum Code {
        Success = 0;    //成功
        Failed = 1;     //失败
    }
    //结果
    Code result = 0;
    AdminInfo info = 1;
}  